--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
       <artifactId>selenium-chrome-driver</artifactId>
       <version>3.141.59</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-firefox-driver</artifactId>
+      <version>3.141.59</version>
+    </dependency>
+
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
